--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <div class="container">
 
-    <img src="D:\Web Development\Restaurant Site\img\RRlogo.png" alt="Logo" class="logo">
+    <img src="RRlogo.png" alt="Logo" class="logo">
 
     <nav>
       <ul>
